@@ -1,5 +1,8 @@
 2009-04-07  Martin Maechler  <maechler@stat.math.ethz.ch>
 
+	* R/sparseVector.R: fix coercion from xsparse*
+	* tests/Simple.R: and check it.
+
 	* man/lu.Rd: document 'warnSing' argument
 	* tests/dg_Matrix.R: and test it
 
